--- a/fronted/horario.html
+++ b/fronted/horario.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Horario</title>
-  <link rel="stylesheet" href="css/asistencia.css">
+  <link rel="stylesheet" href="css/horario.css">
 </head>
 <body>
   <div class="login-container">
