--- a/fronted/index.html
+++ b/fronted/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Lectura de Tarjeta RFID</title>
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <div class="login-container">
