--- a/fronted/profesor_lista.html
+++ b/fronted/profesor_lista.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tomar Pase</title>
-  <link rel="stylesheet" href="css/asistencia.css">
+  <link rel="stylesheet" href="css/proflista.css">
 </head>
 <body>
   <div class="login-container">
