--- a/frontend/ver_pase.html
+++ b/frontend/ver_pase.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pase de Lista - Guardado</title>
-  <link rel="stylesheet" href="css/asistencia.css">
+  <link rel="stylesheet" href="css/verpase.css">
 </head>
 <body>
   <div class="login-container">
